--- a/3dtest2/Base.lproj/LaunchScreen.storyboard
+++ b/3dtest2/Base.lproj/LaunchScreen.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,17 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Logo_Diffuse.png" translatesAutoresizingMaskIntoConstraints="NO" id="58k-2B-IoL">
-                                <rect key="frame" x="44" y="33" width="512" height="512"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="208" fixedFrame="YES" placeholderIntrinsicWidth="200" placeholderIntrinsicHeight="200" image="Logo_Diffuse.png" translatesAutoresizingMaskIntoConstraints="NO" id="tlD-qX-xbL">
+                                <rect key="frame" x="0.0" y="44" width="512" height="512"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.11983839884407654" green="0.0" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="58k-2B-IoL" secondAttribute="bottom" constant="55" id="54D-Ic-aPQ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="58k-2B-IoL" secondAttribute="trailing" constant="24" id="9Hl-Yq-sDS"/>
-                            <constraint firstItem="58k-2B-IoL" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="24" id="JMc-1T-eSC"/>
-                            <constraint firstItem="58k-2B-IoL" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="13" id="rL4-Ft-wdT"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
